objects/VLS_Values_ARG__c.object
<CustomObject>
    <fields>
        <fullName>AccType_AR__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collection Bank Account</fullName>
                </value>
                <value>
                    <fullName>Bank Account</fullName>
                </value>
                <value>
                    <fullName>Rapipago</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_AR__c</fullName>
        <description>Value Amount</description>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_AR__c</fullName>
        <description>Bank number</description>
        <label>Bank</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BranBranch_AR__c</fullName>
        <label>Branch</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommeComment_AR__c</fullName>
        <description>Free text to add any comment</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deposit_AR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the assigned deposit</description>
        <label>Deposit</label>
        <referenceTo>DPT_Deposit_ARG__c</referenceTo>
        <relationshipName>Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DueDate_AR__c</fullName>
        <description>Cheque due date</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IssueDate_AR_c__c</fullName>
        <description>Cheque issue date</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReceiptNo_AR__c</fullName>
        <description>Receipt Number</description>
        <label>Receipt No.</label>
        <referenceTo>RCP_Receipt_ARG__c</referenceTo>
        <relationshipName>Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ValueRecordedinJDE_AR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the Value has been recorded in JDE (by TXT file batch process)</description>
        <label>Value recorded in JDE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValueTXTissued_AR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the process to generate TXT file has ended</description>
        <label>ValueTXT issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValueType_AR__c</fullName>
        <description>Value Type</description>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LAT Value</label>
    <listViews>
        <fullName>Relacionar_Depositos_a_Valores</fullName>
        <columns>NAME</columns>
        <columns>ReceiptNo_AR__c</columns>
        <columns>ValueType_AR__c</columns>
        <columns>Amount_AR__c</columns>
        <columns>Bank_AR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deposit_AR__c</field>
            <operation>lessThan</operation>
            <value>1</value>
        </filters>
        <label>Relacionar Depositos a Valores</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Cheque No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAT Values</pluralLabel>
    <recordTypes>
        <fullName>VLS_Standard_UY</fullName>
        <active>true</active>
        <label>Standard UY</label>
    </recordTypes>
    <recordTypes>
        <fullName>VLS_tandard_AR</fullName>
        <active>true</active>
        <label>Standard AR</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LAT_AR_VLS_VR03_BankBranchValidation</fullName>
        <active>true</active>
        <description>Prevent user from creating a value if the receipt doesn&apos;t have bank or branch en value type is different from &quot;E&quot; or &quot;0&quot;</description>
        <errorConditionFormula>$RecordType.DeveloperName = &apos;VLS_tandard_AR&apos; &amp;&amp;
NOT(
ISPICKVAL(ValueType_AR__c,&apos;E&apos;) ||
ISPICKVAL(ValueType_AR__c,&apos;0&apos;)
) &amp;&amp;
(
ISBLANK(Bank_AR__c) ||
ISBLANK(BranBranch_AR__c)
)</errorConditionFormula>
        <errorDisplayField>AccType_AR__c</errorDisplayField>
        <errorMessage>Bank and branch are required for the selected value type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LAT_AR_VLS_VR04_ValueTypeValidation</fullName>
        <active>true</active>
        <errorConditionFormula>$RecordType.DeveloperName = &apos;VLS_tandard_AR&apos; &amp;&amp; 
ISPICKVAL(ValueType_AR__c,&apos;0&apos;) &amp;&amp;
ISPICKVAL(ReceiptNo_AR__r.LAT_AR_DepositAccountType__c, &apos;R&apos;)</errorConditionFormula>
        <errorDisplayField>ValueType_AR__c</errorDisplayField>
        <errorMessage>Receipts type &quot;R&quot; cannot have values type &quot;0&quot;. Please modify the value to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VLS_VR01_NameLengthValidation_AR</fullName>
        <active>true</active>
        <description>&apos;Cheque No.&apos; length cannot be greater than 9.</description>
        <errorConditionFormula>NOT(ISBLANK(Name)) 
&amp;&amp; 
(NOT(ISNUMBER(Name))) || (LEN(Name) &gt; 9)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot enter a Cheque No. with more than 9 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VLS_VR02_AmountValidation_AR</fullName>
        <active>true</active>
        <errorConditionFormula>Amount_AR__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Amount_AR__c</errorDisplayField>
        <errorMessage>You can not enter an amount less than or equal to 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VLS_VR05_TypeValidation_AR</fullName>
        <active>true</active>
        <errorConditionFormula>(ReceiptNo_AR__r.RecordType.DeveloperName = &apos;LAT_AR_RCP_ReceiptPrintedValueGuarantee&apos;
|| 
ISPICKVAL(ReceiptNo_AR__r.Status_AR__c, &apos;Receipt Value with Guarantee&apos;)
)
&amp;&amp;
 !ISPICKVAL(ValueType_AR__c, &apos;3&apos;)</errorConditionFormula>
        <errorMessage>Printed Receipts with value in guarantee  cannot have values type &quot;3&quot;. Please modify the value to continue.</errorMessage>
    </validationRules>
</CustomObject>